<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">运动与健康系统</string>
    <string name="login_title">运动与健康</string>
    <string name="phone_hint">请输入手机号</string>
    <string name="password_hint">请输入密码</string>
    <string name="code_hint">请输入验证码</string>
    <string name="nickname_hint">请输入昵称</string>
    <string name="login_btn">登录</string>
    <string name="register_btn">注册并进入</string>
    <string name="get_code_btn">获取验证码</string>
    <string name="nav_account">账户</string>
    <string name="nav_profile">资料</string>
    <string name="nav_health">档案</string>
    <string name="nav_workout">运动</string>
    <string name="nav_training">训练计划</string>
    <string name="nav_dashboard">健康看板</string>
    <string name="nav_sync">同步分享</string>
    <string name="start_running">开始跑步</string>
    <string name="pause">暂停</string>
    <string name="resume">继续</string>
    <string name="end_workout">结束</string>
    <string name="save_record">保存记录</string>
    <string name="discard_record">丢弃记录</string>
    <string name="share_achievement">分享成就</string>
</resources>
